Fix opsmon for stitching links (need both ends of link)
Former-commit-id: e894c5d963571514ba4d11a311df1efa76915e6b

--- a/configs/bbn-cam-ctrl-1/config.json
+++ b/configs/bbn-cam-ctrl-1/config.json
@@ -86,7 +86,7 @@
    "glance_images" : [], 
    "internal_vlans": "1001-2000", 
    "stitching_info" : {
-       "aggregate_id" : "urn:publicid:IDN+bbn-cam-ctrl-1.gpolab.bbn.com+authority+cm",
+       "aggregate_id" : "urn:publicid:IDN+bbn-cam-ctrl-1.gpolab.bbn.com+authority+am",
         "aggregate_url" : "https://bbn-cam-ctrl-1.gpolab.bbn.com:5001",
         "edge_points" : [
                 {
