Make sure the untagged stuff still works for DELL (tagged) switches
Former-commit-id: ab92036ad739c698f1146d77a89b8ebfb89ed9bc

--- a/configs/bbn-cam-ctrl-1/config.json
+++ b/configs/bbn-cam-ctrl-1/config.json
@@ -36,6 +36,8 @@
         }
    },
 
+   "shared_vlan_info" : {},
+
    "external_interface": "eth4",
    "external_address": "192.1.243.2",
    "external_netmask": "255.255.192.0",
