--- a/configs/bbn-cam-ctrl-1/config.json
+++ b/configs/bbn-cam-ctrl-1/config.json
@@ -94,8 +94,8 @@
                 {
                 "local_switch" : "urn:publicid:IDN+bbn-cam-ctrl-1.gpolab.bbn.com+node+force10",
                 "port" : "urn:publicid:IDN+bbn-cam-ctrl-1.gpolab.bbn.com+stitchport+force10:3",
-		"local_link" : "urn:publicid:IDN+bbn-cam-ctrl-1.gpolab.bbn.com+interface+force10:3",
-                "remote_switch": "urn:publicid:IDN+ion.internet2.edu+interface+rtr.newy:ae0:gpo-og",
+		"local_link" : "urn:publicid:IDN+bbn-cam-ctrl-1.gpolab.bbn.com+interface+force10:3:al2s",
+                "remote_switch": "urn:publicid:IDN+al2s.internet2.edu+interface+sdn-sw.newy32aoa.net.internet2.edu:eth5/2:gpo-og",
                 "vlans" : "2611-2630",
                 "traffic_engineering_metric" : "22",
                 "capacity": "2500000",
