Changes to config.json to be consistent with stitcher/SCS requirements
Former-commit-id: 4a152cc637f0d5531fde12146922331f5312a771

--- a/configs/clemson-control-1/config.json
+++ b/configs/clemson-control-1/config.json
@@ -108,7 +108,7 @@
                 "local_switch" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+node+force10_760",
                 "port" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+stitchport+force10_760:12",
                 "local_link" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+interface+force10_760:12",
-                "remote_switch": "urn:publicid:IDN+wimax.clemson.edu+interface+foobar",
+                "remote_switch": "urn:publicid:IDN+campus.clemson.edu+interface+campus-1",
                 "vlans" : "760",
                 "traffic_engineering_metric" : "22",
                 "capacity": "1000000",
@@ -121,7 +121,7 @@
                 "local_switch" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+node+force10_4083",
                 "port" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+stitchport+force10_4083:3",
                 "local_link" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+interface+force10_4083:3",
-                "remote_switch": "urn:publicid:IDN+wimax.clemson.edu+interface+foobar",
+                "remote_switch": "urn:publicid:IDN+campus.clemson.edu+interface+campus-2",
                 "vlans" : "4083",
                 "traffic_engineering_metric" : "22",
                 "capacity": "1000000",
@@ -134,7 +134,7 @@
                 "local_switch" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+node+force10_4084",
                 "port" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+stitchport+force10_4084:3",
                 "local_link" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+interface+force10_4084:3",
-                "remote_switch": "urn:publicid:IDN+wimax.clemson.edu+interface+foobar",
+                "remote_switch": "urn:publicid:IDN+campus.clemson.edu+interface+campus-3",
                 "vlans" : "4084",
                 "traffic_engineering_metric" : "22",
                 "capacity": "1000000",
@@ -147,7 +147,7 @@
                 "local_switch" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+node+force10_4085",
                 "port" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+stitchport+force10_4085:3",
                 "local_link" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+interface+force10_4085:3",
-                "remote_switch": "urn:publicid:IDN+wimax.clemson.edu+interface+foobar",
+                "remote_switch": "urn:publicid:IDN+campus.clemson.edu+interface+campus-4",
                 "vlans" : "4085",
                 "traffic_engineering_metric" : "22",
                 "capacity": "1000000",
@@ -160,7 +160,7 @@
                 "local_switch" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+node+force10_4087",
                 "port" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+stitchport+force10_4087:3",
                 "local_link" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+interface+force10_4087:3",
-                "remote_switch": "urn:publicid:IDN+wimax.clemson.edu+interface+foobar",
+                "remote_switch": "urn:publicid:IDN+campus.clemson.edu+interface+campus-5",
                 "vlans" : "4087",
                 "traffic_engineering_metric" : "22",
                 "capacity": "1000000",
@@ -171,7 +171,7 @@
                 },
                 {
                 "local_switch" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+node+force10",
-                "port" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+stitchport+force10:16",
+                "port" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+stitchport+force10:16:al2s",
                 "local_link" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+interface+force10:16:al2s",
                 "remote_switch": "urn:publicid:IDN+al2s.internet2.edu+interface+sdn-sw.atla.net.internet2.edu:eth1/1:clemson-og",
                 "vlans" : "3000-3009",
