--- a/src/services/gram-am.conf
+++ b/src/services/gram-am.conf
@@ -35,7 +35,7 @@ end script
 env PYTHONPATH=/opt/gcf/src:/home/gram/gram/src
 env OS_TENANT_NAME=admin
 env OS_USERNAME=admin
-env OS_PASSWORD=password
+env OS_PASSWORD=admin_pass
 env OS_AUTH_URL="http://localhost:5000/v2.0/"
 
 exec su -s /bin/sh -c "exec python /home/gram/gram/src/gram-am.py" gram 
