Changes to support upgrade to gcf-2.8
Former-commit-id: ceded17dca947befc301c6197d3f40c806621144

--- a/configs/clemson-control-1/config.json
+++ b/configs/clemson-control-1/config.json
@@ -184,6 +184,7 @@
                 }
         ]
    },
+   "shared_vlan_info" : {},
    "public_ip": "130.127.88.101",
    "mgmt_ns": "qrouter-a03127ba-7184-42e6-bd5d-2e5957193b86"
 
