Take 2 on syncing the bos controller and github

--- a/src/services/gram-am.conf
+++ b/src/services/gram-am.conf
@@ -1,5 +1,5 @@
 #----------------------------------------------------------------------
-# Copyright (c) 2013 Raytheon BBN Technologies
+# Copyright (c) 2013-2016 Raytheon BBN Technologies
 #
 # Permission is hereby granted, free of charge, to any person obtaining
 # a copy of this software and/or hardware specification (the "Work") to
@@ -35,8 +35,8 @@ end script
 env PYTHONPATH=/opt/gcf/src:/home/gram/gram/src
 env OS_TENANT_NAME=admin
 env OS_USERNAME=admin
-env OS_PASSWORD=admin_pass
-env OS_AUTH_URL="http://localhost:5000/v2.0/"
+env OS_PASSWORD=os_pwd
+env OS_AUTH_URL=http://gram1-control:5000/v2.0/
 
 exec su -s /bin/sh -c "exec python /home/gram/gram/src/gram-am.py" gram 
 
